--- a/alpinos/alpinos_development/web_form/job_application/job_application.json
+++ b/alpinos/alpinos_development/web_form/job_application/job_application.json
@@ -7,7 +7,7 @@
  "allow_print": 0,
  "anonymous": 0,
  "apply_document_permissions": 0,
- "client_script": "frappe.web_form.on('resume_link', (field, value) => {\n    if (!frappe.utils.is_url(value)) {\n        frappe.msgprint(__('Resume link not valid'));\n    }\n});\n",
+ "client_script": "\n// Ensure job_requisition from URL parameter job_title is set in form data\n(function() {\n    const urlParams = new URLSearchParams(window.location.search);\n    const jobTitle = urlParams.get('job_title');\n    \n    if (!jobTitle) return;\n    \n    console.log('\ud83d\udd0d Found job_title in URL:', jobTitle);\n    \n    // Wait for Frappe and web form to be ready\n    frappe.ready(function() {\n        // Wait for web form to be initialized\n        function waitForWebForm(callback) {\n            if (frappe.web_form && frappe.web_form.doc !== undefined) {\n                callback();\n            } else {\n                setTimeout(function() {\n                    waitForWebForm(callback);\n                }, 100);\n            }\n        }\n        \n        waitForWebForm(function() {\n            function setJobRequisition() {\n                if (!frappe.web_form) return false;\n                \n                try {\n                    // CRITICAL: Set job_requisition (this is the required field)\n                    if (frappe.web_form.doc) {\n                        frappe.web_form.doc.job_requisition = jobTitle;\n                        console.log('\u2705 Set job_requisition in doc:', jobTitle);\n                    }\n                    \n                    // Also set job_title for compatibility\n                    if (frappe.web_form.doc) {\n                        frappe.web_form.doc.job_title = jobTitle;\n                    }\n                    \n                    // Set via web form API - job_requisition (the actual form field)\n                    if (frappe.web_form.set_value) {\n                        frappe.web_form.set_value('job_requisition', jobTitle);\n                        frappe.web_form.set_value('job_title', jobTitle);\n                    }\n                    \n                    // Set via field if available\n                    if (frappe.web_form.fields_dict) {\n                        // Set job_requisition field (the visible form field)\n                        if (frappe.web_form.fields_dict.job_requisition) {\n                            const field = frappe.web_form.fields_dict.job_requisition;\n                            if (field) {\n                                if (field.set_value) {\n                                    field.set_value(jobTitle);\n                                }\n                                if (field.$input) {\n                                    field.$input.val(jobTitle);\n                                    field.$input.trigger('change');\n                                }\n                            }\n                        }\n                        // Also set job_title if field exists\n                        if (frappe.web_form.fields_dict.job_title) {\n                            const field = frappe.web_form.fields_dict.job_title;\n                            if (field && field.set_value) {\n                                field.set_value(jobTitle);\n                            }\n                        }\n                    }\n                    \n                    return true;\n                } catch (e) {\n                    console.error('\u274c Error setting job_requisition:', e);\n                    return false;\n                }\n            }\n            \n            // Set immediately\n            setJobRequisition();\n            \n            // Retry a few times\n            let attempts = 0;\n            const retry = setInterval(function() {\n                attempts++;\n                if (setJobRequisition() || attempts >= 5) {\n                    clearInterval(retry);\n                }\n            }, 300);\n            \n            // CRITICAL: Ensure job_requisition before submit\n            $(document).on('submit', '.web-form', function(e) {\n                if (frappe.web_form && frappe.web_form.doc) {\n                    frappe.web_form.doc.job_requisition = jobTitle;\n                    frappe.web_form.doc.job_title = jobTitle;\n                    console.log('\u2705 Set job_requisition before submit:', jobTitle);\n                }\n            });\n            \n            // Intercept save method safely\n            if (frappe.web_form && frappe.web_form.save) {\n                const originalSave = frappe.web_form.save.bind(frappe.web_form);\n                frappe.web_form.save = function() {\n                    if (this.doc) {\n                        this.doc.job_requisition = jobTitle;\n                        this.doc.job_title = jobTitle;\n                    }\n                    return originalSave();\n                };\n            }\n        });\n    });\n})();",
  "condition_json": "[]",
  "creation": "2016-09-10 02:53:16.598314",
  "doc_type": "Job Applicant",
@@ -19,13 +19,13 @@
  "list_columns": [],
  "login_required": 0,
  "max_attachment_size": 0,
- "modified": "2026-01-18 16:48:23.861588",
+ "modified": "2026-01-24 10:04:29.087195",
  "modified_by": "Administrator",
  "module": "Alpinos Development",
  "name": "job-application",
  "owner": "Administrator",
  "published": 1,
- "route": "job_application",
+ "route": "job-application",
  "show_attachments": 0,
  "show_list": 0,
  "show_sidebar": 1,
@@ -126,7 +126,7 @@
   },
   {
    "allow_read_on_all_link_options": 0,
-   "fieldname": "job_requisition",
+   "fieldname": "job_title",
    "fieldtype": "Link",
    "hidden": 0,
    "label": "Job Opening",
@@ -345,20 +345,6 @@
    "precision": "",
    "read_only": 0,
    "reqd": 1,
-   "show_in_filter": 0
-  },
-  {
-   "allow_read_on_all_link_options": 0,
-   "fieldname": "reference",
-   "fieldtype": "Table",
-   "hidden": 0,
-   "label": "Reference (If Any)",
-   "max_length": 0,
-   "max_value": 0,
-   "options": "Job Application Reference",
-   "precision": "",
-   "read_only": 0,
-   "reqd": 0,
    "show_in_filter": 0
   }
  ]
